--- a/NewtonMethod/Project.toml
+++ b/NewtonMethod/Project.toml
@@ -1,4 +1,5 @@
 [deps]
+IJulia = "7073ff75-c697-5162-941a-fcdaad2a7d2a"
 Logging = "56ddb016-857b-54e1-b83d-db4d58db5568"
 PkgTemplates = "14b8a8f1-9102-5b29-a752-f990bacb7fe1"
 Revise = "295af30f-e4ad-537b-8983-00126c2a3abe"
