--- a/NewtonMethod/Project.toml
+++ b/NewtonMethod/Project.toml
@@ -1,5 +1,6 @@
 [deps]
 IJulia = "7073ff75-c697-5162-941a-fcdaad2a7d2a"
 Logging = "56ddb016-857b-54e1-b83d-db4d58db5568"
+NewtonMethod = "0530fb47-382b-4a06-8d28-54f7295c64e4"
 PkgTemplates = "14b8a8f1-9102-5b29-a752-f990bacb7fe1"
 Revise = "295af30f-e4ad-537b-8983-00126c2a3abe"
