--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -42,3 +42,5 @@ jobs:
       - uses: codecov/codecov-action@v3
         with:
           files: lcov.info
+
+CODECOV_TOKEN=db1a6188-d6e8-488d-8f46-6e24dec3dccd
