--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -42,3 +42,12 @@ jobs:
       - uses: codecov/codecov-action@v3
         with:
           files: lcov.info
+
+
+
+
+- name: Upload coverage reports to Codecov
+  uses: codecov/codecov-action@v4.0.1
+  with:
+    token: ${{ secrets.CODECOV_TOKEN }}
+    slug: Daisuke1988/NewtonMethod.jl
