--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -39,15 +39,12 @@ jobs:
       - uses: julia-actions/julia-buildpkg@v1
       - uses: julia-actions/julia-runtest@v1
       - uses: julia-actions/julia-processcoverage@v1
-      - uses: codecov/codecov-action@v3
+      - uses: codecov/codecov-action@v4
         with:
           files: lcov.info
 
-
-
-
-- name: Upload coverage reports to Codecov
-  uses: codecov/codecov-action@v4.0.1
-  with:
-    token: ${{ secrets.CODECOV_TOKEN }}
-    slug: Daisuke1988/NewtonMethod.jl
+    name: Upload coverage reports to Codecov
+      uses: codecov/codecov-action@v4.0.1
+      with:
+      token: ${{ secrets.CODECOV_TOKEN }}
+      slug: Daisuke1988/NewtonMethod.jl
