--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -42,4 +42,22 @@ jobs:
       - uses: codecov/codecov-action@v3
         with:
           files: lcov.info
-          
+
+coverage:
+  status:
+    project:
+      default:
+        # basic
+        target: auto #default
+        threshold: 0%
+        base: auto 
+        flags: 
+          - unit
+        paths: 
+          - "src"
+       # advanced settings
+        branches: 
+          - master
+        if_ci_failed: error #success, failure, error, ignore
+        informational: false
+        only_pulls: false          
