--- a/.github/codecov.yml
+++ b/.github/codecov.yml
@@ -5,3 +5,6 @@ comment:                  # this is a top-level key
   require_base: false        # [true :: must have a base report to post]
   require_head: true       # [true :: must have a head report to post]
   hide_project_coverage: false # [true :: only show coverage on the git diff]
+
+  codecov: 
+  token: db1a6188-d6e8-488d-8f46-6e24dec3dccd
