--- a/.github/codecov.yml
+++ b/.github/codecov.yml
@@ -1,10 +1,21 @@
-comment:                  # this is a top-level key
-  layout: " diff, flags, files"
+codecov:
+  require_ci_to_pass: true
+comment:
   behavior: default
-  require_changes: false  # if true: only post the comment if coverage changes
-  require_base: false        # [true :: must have a base report to post]
-  require_head: true       # [true :: must have a head report to post]
-  hide_project_coverage: false # [true :: only show coverage on the git diff]
-
-  codecov: 
-  token: db1a6188-d6e8-488d-8f46-6e24dec3dccd
+  layout: reach,diff,flags,tree,reach
+  show_carryforward_flags: false
+coverage:
+  precision: 2
+  range:
+  - 60.0
+  - 80.0
+  round: down
+  status:
+    changes: false
+    default_rules:
+      flag_coverage_not_uploaded_behavior: include
+    patch: true
+    project: true
+github_checks:
+  annotations: true
+slack_app: true
